DuPont DevSB/src/objects/Outline_Agreement_Item__c.object
<CustomObject>
    <fields>
        <fullName>FF_PSA_Business_Partner_Nb__c</fullName>
        <formula>FF_PSA_Resource__r.FF_PSA_Business_Partner_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ERP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Item_Descr__c</fullName>
        <label>OA Item Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Item_Nb__c</fullName>
        <label>OA Item Nb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Nb__c</fullName>
        <label>OA Nb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Service_Nb__c</fullName>
        <description>Service number for the assignment type</description>
        <label>OA Service Nb</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3106602</fullName>
                </value>
                <value>
                    <fullName>3106603</fullName>
                </value>
                <value>
                    <fullName>3106604</fullName>
                </value>
                <value>
                    <fullName>3106605</fullName>
                </value>
                <value>
                    <fullName>3106606</fullName>
                </value>
                <value>
                    <fullName>3106607</fullName>
                </value>
                <value>
                    <fullName>3106608</fullName>
                </value>
                <value>
                    <fullName>3111680</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_SubLine_Item_Descr__c</fullName>
        <label>OA Sub Line Item Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAFETY CONSULTANT - HOLDOVER</fullName>
                </value>
                <value>
                    <fullName>EXPENSES - TRANSPORTATION</fullName>
                </value>
                <value>
                    <fullName>EXPENSES - OTHER</fullName>
                </value>
                <value>
                    <fullName>SAFETY CONSULTANT - WORK</fullName>
                </value>
                <value>
                    <fullName>SAFETY CONSULTANT - TRAVEL</fullName>
                </value>
                <value>
                    <fullName>SAFETY CONSULTANT - TRAINING</fullName>
                </value>
                <value>
                    <fullName>EXPENSES - LODGING</fullName>
                </value>
                <value>
                    <fullName>SAFETY CONSULTANT - OTHER FEES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_OA_Sub_Line_Item_Nb__c</fullName>
        <label>OA Sub Line Item Nb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outline Agreement Items</relationshipLabel>
        <relationshipName>Outline_Agreement_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Outline Agreement Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FF_PSA_Resource__c</columns>
        <columns>FF_PSA_OA_Item_Descr__c</columns>
        <columns>FF_PSA_OA_SubLine_Item_Descr__c</columns>
        <columns>FF_PSA_OA_Item_Nb__c</columns>
        <columns>FF_PSA_OA_Nb__c</columns>
        <columns>FF_PSA_OA_Service_Nb__c</columns>
        <columns>FF_PSA_OA_Sub_Line_Item_Nb__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OAI-{0000000}</displayFormat>
        <label>Outline Agreement Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outline Agreement Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>